[package]
authors = ["Will Medrano <will.s.medrano@gmail.com", "Henna Haahti <grejppi@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "lilv"
version = "0.0.1"

[dependencies]
lilv-sys = "0.2"
lv2_raw = "0.2"
parking_lot = "0.11"

[dev-dependencies]
lv2-urid = "2"

[build-dependencies]
pkg-config = "0.3"
