[package]
authors = ["Will Medrano <will.s.medrano@gmail.com", "Henna Haahti <grejppi@gmail.com>"]
build = "build.rs"
description = "Library for discovering and running LV2 plugins."
edition = "2018"
keywords = ["lilv", "lv2", "audio"]
license = "MIT"
name = "lilv"
readme = "README.md"
version = "0.0.3"

[dependencies]
lilv-sys = "0.2"
lv2_raw = "0.2"
parking_lot = "0.11"

[build-dependencies]
pkg-config = "0.3"
